tests/ui/half-open-range-patterns/half-open-range-pats-exhaustive-fail.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/half-open-range-pats-exhaustive-fail.rs:14:8
   |
LL |     m!(0f32, f32::NEG_INFINITY..);
   |        ^^^^ pattern `_` not covered
   |
   = note: the matched value is of type `f32`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL |         match $s { $($t)+ => {}, _ => todo!() }
   |                                ++++++++++++++

error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/half-open-range-pats-exhaustive-fail.rs:15:8
   |
LL |     m!(0f32, ..f32::INFINITY);
   |        ^^^^ pattern `_` not covered
   |
   = note: the matched value is of type `f32`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL |         match $s { $($t)+ => {}, _ => todo!() }
   |                                ++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
